# cadastro_de_vagas

./: .env  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
vagas/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
vagas/migrations/: 0001_initial.py
vagas/templates/: home.html
